<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anton.wifigijon.Fragments.FragmentMail">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destinatario"
        android:layout_gravity="center_horizontal"
        android:id="@+id/etDestinatario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/asunto"
        android:layout_gravity="center_horizontal"
        android:id="@+id/etAsunto" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contenido"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:id="@+id/etContenido" />

    <Button
        android:text="@string/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/btEnviar" />
</LinearLayout>
